# acemagic-ledctl

./: README.md  pyproject.toml
ledctl/: ledctl.tar
ledctl/cli/: off.py  setmode.py  setpattern.py  wizard.py
ledctl/core/: __init__.py  core.py  setmode.py
ledctl/patterns/: __init__.py  alarm.py  breathered.py  stillblue.py  stillred.py
